--- a/style.scss
+++ b/style.scss
@@ -13,9 +13,15 @@ h1{
 
 }
 
-body{
-    background-color: white;
-}
+    
+
+
+
+    
+   
+
+    
+
 
 .calculator{
     display: grid;
@@ -24,7 +30,7 @@ body{
     margin: auto;
     width: 50vw;
     height: 80vh;
-
+    
 
 
 
@@ -56,11 +62,12 @@ body{
 
     
     .operation-log{
-        display: none;
+        visibility: hidden;
         border: 1px solid gray;
         display: grid;
         grid-template-rows: 1fr 6fr;
         background-color: bisque;
+        background-color:darkcyan
 
         
     }
@@ -71,6 +78,7 @@ body{
         border: 1px solid gray;
         display: grid;
         grid-template-rows: repeat(2,2fr) 1fr;
+        
         
     
     
@@ -133,6 +141,7 @@ body{
     
     
     .sci{
+        visibility: hidden;
     
         background-color: bisque;
         display: grid;
@@ -267,13 +276,9 @@ body{
     background-color: black;
 }
 
-.dark #res{
-    background-color: rgb(252, 252, 137);
-}
 
-.dark #mode{
-    background-color: rgb(205, 167, 96);
-}
+
+
 
 .dark .operation-log{
     background-color: rgb(174, 174, 174);
@@ -283,6 +288,20 @@ body{
     background-color: rgb(174, 174, 174);
 }
 
-.dark body{
-    background-color: black;
+
+.light #res{
+    background-color: rgb(252, 252, 137);
+}
+
+.light #mode{
+    background-color: rgb(205, 167, 96);
+}
+
+
+.sciMode #seintific{
+    background-color: rgb(205, 167, 96);
+}
+
+.ON #history{
+    background-color: rgb(205, 167, 96);
 }
