--- a/style.scss
+++ b/style.scss
@@ -3,12 +3,13 @@
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    font-family:Arial, Helvetica, sans-serif
 }
 
 
 h1{
     text-align: center;
-    padding: 50px;
+    padding: 0.8em;
     
 
 }
@@ -30,14 +31,17 @@ h1{
     margin: auto;
     width: 50vw;
     height: 80vh;
+    min-height: 50vh;
+   
     
 
 
 
     button, #name, #empty, #m-empty,#b-empty{
         border-radius: 0%;
-        border: 1px solid gray;
-        background-color: rgb(153, 227, 202);
+        border: 1px solid rgba(128, 128, 128, 0.366);
+        background-color:#90b4ce;
+       
 
       
     }
@@ -45,8 +49,7 @@ h1{
     
 
         .nums, #point {
-        background-color: rgb(120, 222, 222);
-
+        background-color:  #d2d2d1;
         &:hover{
             background-color: rgb(162, 195, 195);
         }
@@ -63,11 +66,13 @@ h1{
     
     .operation-log{
         visibility: hidden;
-        border: 1px solid gray;
         display: grid;
         grid-template-rows: 1fr 6fr;
-        background-color: bisque;
-        background-color:darkcyan
+        background-color: #d2d2d1;
+        min-height: 20%;
+        text-align: center;
+        border-radius: 5px;
+        box-shadow: 0 10px 10px rgb(0 0 0 / 0.2);
 
         
     }
@@ -75,9 +80,13 @@ h1{
     
     
     .main{
-        border: 1px solid gray;
+        border: 1px solid rgba(128, 128, 128, 0.366);
         display: grid;
         grid-template-rows: repeat(2,2fr) 1fr;
+        border-radius: 5px;
+        box-shadow: 0 10px 10px  rgb(0 0 0 / 0.2);
+        min-width: 30vw;
+        min-height: 50vh;
         
         
     
@@ -91,7 +100,8 @@ h1{
     
             #name, #res{
                 text-align: center;
-                border: 1px solid gray;
+                border: 1px solid rgba(128, 128, 128, 0.366);
+               
             }
             
             
@@ -121,7 +131,7 @@ h1{
          #empty{
              grid-row: 1/3;
              grid-column: 1/2;
-             border: 1px solid gray;
+             border: 1px solid rgba(128, 128, 128, 0.366);
          }
          #eq{
             grid-row: 1/3;
@@ -130,7 +140,7 @@ h1{
             
          }
          #b-empty{
-            border: 1px solid gray;
+            border: 1px solid #80808072;
             grid-column: 2/5;
             
     
@@ -142,14 +152,18 @@ h1{
     
     .sci{
         visibility: hidden;
-    
-        background-color: bisque;
+        text-align: center;
+        background-color:rgb(162, 195, 195);
         display: grid;
+        min-height: 20%;
         grid-template-columns: 1fr;
         grid-template-rows: repeat(2,2fr) 1fr;
         grid-template-areas:"top"
                             "middle"
                             "bottom";
+
+                            border-radius: 5px;
+                            box-shadow: 0 10px 10px rgb(0 0 0 / 0.2);
         
         
     
@@ -157,8 +171,9 @@ h1{
     
         .top{
             
-            border: 1px solid gray;
+            
             grid-area:top ;
+            min-height: 25%;
 
             #empty{
                 grid-row: 2/4;
@@ -171,14 +186,31 @@ h1{
             grid-area: middle;
             display: grid;
             grid-template-columns: 1fr 1fr;
-            background-color: bisque;
+            min-height: 40%;
             
+            
+        }
+
+        .sciOperators{
+            background-color:rgb(162, 195, 195);
+
+            &:hover{
+                background-color:#d2d2d1;
+            }
         }
 
         #base2{
             grid-area: bottom;
+            min-height: fit-content;
+            border:transparent;
             
 
+        }
+        #pi{
+            background-color: rgb(162, 195, 195);
+            &:hover{
+                background-color:#d2d2d1;
+            }
         }
     
         
@@ -209,10 +241,17 @@ h1{
             height: 60%;
         }
 
+        #res{
+            display: flex;
+            flex-direction: column;
+        }
+
         
     }
 
-
+.lightmode body{
+    background-color: white;
+}
     
 
     
